# cwm-rust

./: CHANGELOG.md  COMPARISON.md  Cargo.toml  LICENSE  Makefile  README.md  REFACTORING.md  build.rs  install.sh
.github/workflows/: release.yml
benches/: reasoning.rs
completions/: cwm.bash  cwm.fish  cwm.zsh
docs/: BUILTINS.md  COMPARISON.md  CONFIGURATION.md  CWM_GAP_ANALYSIS.md  DISTRIBUTED.md  EXAMPLES.md  REASONING.md  SPARQL.md  VALUATION.md  cwm.1
man/: cwm.1
packaging/debian/: changelog  control  copyright  rules
packaging/homebrew/: cwm.rb
packaging/rpm/: cwm.spec
packaging/windows/: cwm.wxs
src/: error.rs  lib.rs  main.rs
src/builtins/: helpers.rs  mod.rs
src/builtins/math/: arithmetic.rs  comparison.rs  mod.rs
src/config/: mod.rs
src/core/: mod.rs  namespaces.rs  traits.rs
src/fuseki/: mod.rs
src/http_client/: mod.rs
src/parser/: kif.rs  mod.rs  rdfxml.rs
src/prover/: cdcl.rs  clause.rs  dl_tableau.rs  dpll.rs  knuth_bendix.rs  leancop.rs  mod.rs  nanocop.rs  otter.rs  prover9.rs  resolution.rs  smt.rs  superposition.rs  tableau.rs  term.rs  unify.rs
src/reasoner/: explanation.rs  incremental.rs  mod.rs  parallel.rs  proof.rs
src/reasoning/: backward.rs  caching.rs  clp.rs  cluster.rs  consistency.rs  defeasible.rs  distributed.rs  forward.rs  fuzzy.rs  hypothetical.rs  ipc.rs  kgc.rs  materialization.rs  ml.rs  mod.rs  nlp.rs  owl2rl.rs  probabilistic.rs  rdfs.rs  reactive.rs  strategy.rs  temporal.rs  versioning.rs
src/server/: mod.rs
src/sparql/: cache.rs  dataset_engine.rs  federated.rs  mod.rs  optimizer.rs  path.rs  update.rs
src/store/: dataset.rs  mod.rs  sqlite.rs
src/term/: blank.rs  list.rs  literal.rs  mod.rs  uri.rs  variable.rs
tests/: TEST_REPORT.md  run-comparison.sh  run-tests.sh
tests/n3/: 01-basic-triples.n3  02-simple-rule.n3  03-transitive.n3  04-family.n3  05-multi-pattern.n3  06-type-propagation.n3  07-blank-nodes.n3  08-collections.n3  09-symmetric.n3  10-chain.n3  11-math-builtins.n3  12-string-builtins.n3  13-list-builtins.n3  14-log-builtins.n3  15-negation.n3  16-crypto-builtins.n3  17-comparison-builtins.n3
tests/sparql/: ask.rq  construct.rq  data.n3  optional.rq  select-basic.rq  select-filter.rq
tests/swap_compliance/: README.md  crypto.n3  graph.n3  list.n3  log.n3  math.n3  n3_syntax.n3  os.n3  run_compliance.sh  string.n3  time.n3
