[package]
name = "cwm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Closed World Machine - High-performance N3 reasoner and RDF processor with SPARQL support"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/cwm-rust/cwm-rust"
repository = "https://github.com/cwm-rust/cwm-rust"
documentation = "https://docs.rs/cwm"
keywords = ["rdf", "n3", "semantic-web", "reasoner", "sparql"]
categories = ["command-line-utilities", "science", "database", "parser-implementations"]
authors = ["CWM-Rust Contributors"]
exclude = [
    ".github/",
    "tests/",
    "benches/",
    "docs/",
    "examples/",
    ".gitignore",
    ".cargo/",
    "target/",
]

[package.metadata.deb]
maintainer = "CWM-Rust Contributors <cwm-rust@example.org>"
copyright = "2024-2025, CWM-Rust Contributors"
license-file = ["LICENSE", "0"]
extended-description = """\
CWM-Rust is a high-performance implementation of the Closed World Machine, \
an N3 (Notation3) reasoner and RDF processor originally created by Tim Berners-Lee. \
Features include 302+ built-in predicates, full SPARQL 1.1 support, 11 theorem \
proving engines, and advanced reasoning capabilities including fuzzy logic, \
probabilistic inference, and distributed reasoning."""
depends = "$auto"
section = "science"
priority = "optional"
assets = [
    ["target/release/cwm", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cwm/README", "644"],
    ["LICENSE", "usr/share/doc/cwm/LICENSE", "644"],
    ["completions/cwm.bash", "usr/share/bash-completion/completions/cwm", "644"],
    ["completions/cwm.zsh", "usr/share/zsh/vendor-completions/_cwm", "644"],
    ["completions/cwm.fish", "usr/share/fish/vendor_completions.d/cwm.fish", "644"],
    ["man/cwm.1", "usr/share/man/man1/cwm.1", "644"],
]

[package.metadata.rpm]
package = "cwm"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
cwm = { path = "/usr/bin/cwm" }

[package.metadata.wix]
upgrade-guid = "A1B2C3D4-E5F6-7890-ABCD-EF1234567890"
path-guid = "B2C3D4E5-F6A7-8901-BCDE-F12345678901"
license = false
eula = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "cwm"
path = "src/lib.rs"

[[bin]]
name = "cwm"
path = "src/main.rs"

[features]
default = ["full"]
full = ["server", "fuseki", "sqlite", "crypto"]
server = ["axum", "tower", "tower-http"]
fuseki = []
sqlite = ["rusqlite"]
crypto = ["sha2", "md-5", "hmac", "sha1"]
# Minimal build without optional features
minimal = []

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"

# Parsing
nom = "7"

# Data structures
indexmap = "2"

# URIs
percent-encoding = "2"

# Error handling
thiserror = "1"
anyhow = "1"

# Hashing
fnv = "1"

# Regex for string builtins
regex = "1"

# Time handling for time builtins
chrono = "0.4"

# Crypto for crypto builtins (optional)
sha2 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
sha1 = { version = "0.10", optional = true }
base64 = "0.21"
hex = "0.4"

# HTTP for web fetching (sync, kept for simple CLI operations)
ureq = { version = "2", features = ["json"] }

# JSON parsing for SPARQL results and Fuseki
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Configuration file parsing
toml = "0.8"
dirs = "5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Async HTTP server (optional)
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }

# Async HTTP client (for future async fetch operations)
reqwest = { version = "0.12", features = ["json"] }

# SQLite for database access (optional)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[dev-dependencies]
pretty_assertions = "1"
urlencoding = "2"
tempfile = "3"
criterion = "0.5"

[build-dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
clap_mangen = "0.2"

[[bench]]
name = "reasoning"
harness = false

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.release-debug]
inherits = "release"
debug = true
strip = false

[profile.dist]
inherits = "release"
lto = "fat"
